# Observatory-Indi-Drivers

./: .gitignore  CMakeLists.txt  INSTALL_SERVICE.md  QUICK_TEST.md  README.md  TESTING.md  telescope_controller.cpp  test_driver.sh
drivers/roof_controller/: CMakeLists.txt  roof_controller.cpp  roof_controller.h
drivers/telescope_controller/: CMakeLists.txt  telescope_controller.h
udev/: 99-ftdi-telescope.rules  99-roof-controller.rules
